--- a/Project_3.ipynb
+++ b/Project_3.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import preprocessing, cross_validation, decomposition, feature_extraction, feature_selection, model_selection"
+    "from sklearn import preprocessing,  decomposition, feature_extraction, feature_selection, model_selection"
    ]
   },
   {
